main.css
* {
	margin: 0;
	padding: 0;
}

body {
	display: flex;
	align-items: center;
	justify-content: flex-start;
	flex-direction: column;
	height: 100vh;
	width: 100%;
	background-color: #000;
	background-image: url('orb.gif');
	background-repeat: no-repeat;
	background-position: top left;
	color: #fff;
	font-size: 14px;
	font-family: 'Quicksand', sans-serif;
}

.warning {
	padding: 5px 10px;
	background-color: #2f2f2f;
	font-weight: 700;
	margin: 0 0 1em 0;
	transition: background-color 0.5s ease;
}

.wrapper {
	width: 90%;
	padding: 20px;
}

h1 {
	font-size: 30px;
	margin: 0 0 5px 0;
}

h2 {
	font-size: 22px;
	margin: 0 0 15px 0;
	font-weight: 400;
}

#ghost_info {
	margin: 10px 0 20px 0;
}

#checkboxes {
	margin: 0 0 20px 0;
}

#checkboxes ul, #ghost_info ul {
	display: flex;
	flex-direction: row;
	width: 100%;
	flex-wrap: wrap;
}

#checkboxes li, #ghost_info li {
	display: flex;
	align-items: center;
	margin: 0 1em 1em 0;
}

#ghost_name {
	margin: 0 15px 0 0;
}

#ghost_info label {
	font-size: 22px;
}

#ghost_info input[type="text"] {
	background: #1a1a1a;
	width: 350px;
	border: none;
	outline: none;
	text-decoration: none;
	color: #f41f86;
	font-size: 22px;
	padding: 5px;
	margin: 0;
	-webkit-appearance: none;
	-moz-appearance:    none;
	appearance:         none;
	font-family: 'Quicksand', sans-serif;
	border-radius: 2px;
}

#ghost_info input[type="text"]:focus {	
	background: #fff;
	color: #000;
}

#ghost_info input[type=reset] {
	background-color: #484848;
	border: none;
	color: #fff;
	padding: 5px 10px;
	border-radius: 2px;
	text-decoration: none;
	font-family: 'Quicksand', sans-serif;
	font-size: 22px;
	cursor: pointer;
	font-weight: 700;
}

#ghost_info input[type=reset]:hover {
	background-color: #f41f86;
}

#checkboxes input[type="checkbox"], #ghost_info input[type="checkbox"] {
	position:absolute;
	visibility:hidden;
	opacity:0;
}

#checkboxes ul li input[type="checkbox"] + label, #ghost_info input[type="checkbox"] + label {
	background: #484848;
	font-weight: 700;
	padding: 5px 10px;
	border-radius: 2px;
	cursor: pointer;
	font-size: 22px;
}

#checkboxes input[type="checkbox"]:hover + label, #ghost_info input[type="checkbox"]:hover + label {
	background-color: #f41f86;
}

#checkboxes input[type="checkbox"]:checked + label, #ghost_info input[type="checkbox"]:checked + label {
	background: #f41f86;
}

#ghosts {
	display: flex;
    flex-wrap: wrap;
}

.ghost {
    margin: 0 2em 2em 0;
    transition: opacity 1s ease;
    width: 15%;
}

.fadeout {
	opacity: 0;
}

.fadein {
	opacity: 1;
}

.ghost.disabled h3 {
	color: #ff5656;
}

.ghost h3 {
	font-size: 22px;
	transition: color .125s ease;
}

.ghost h3, .ghost h4 {
	margin: 0 0 0.2em 0;
}

.ghost.yes h3 {
	color: #55be61;
}

.ghost.maybe h3 {
	color: #f41f86;
}

.ghost p {
	margin: 0 0 0.8em 0;
	font-size: 13px;
}

.ghost .evidence li {
	list-style: none;
	background-color: #2f2f2f;
	border-radius: 5px;
	padding: 2px;
	text-align: center;
	margin: 0 0 0.4em 0;
	font-weight: 700;
}

.ghost .evidence li.yes {
	background-color: #f41f86;
}


.ghost.yes .evidence li.yes {
	color: #000;
	background-color: #55be61;
}

.ghost.disabled .evidence li.yes {
	background-color: #ff5656;	
}

footer {
	font-size: 16px;
	text-align: center;

}

a {
	color: #f41f86;
	font-weight: 700;
	padding: 0 2px;
}

a:hover {
	background: #f41f86;
	color: #fff;
}

@media screen and (max-width: 1000px) {
	#checkboxes li {
		margin: 0 1em 1em 0;
	}
	#ghost_info li {
		width: 100%;
		margin: 0 1em 1em 0;
	}
	#ghosts {
		flex-wrap: wrap;
	}
	.ghost {
		width: 100%;
	}
}

